Change response for buy endpoint
